# chainlit

./: README.md  docker-compose.yml  pyproject.toml
.docker/nginx/: Dockerfile  nginx.conf
src/: chainlit.md  fakeoauth.py  main.py  settings.py
src/.chainlit/: config.toml
src/env/local/: .env
src/modules/ai/: main.py  prompts.py
src/modules/ai/tools/: __init__.py
src/modules/ai/tools/weather/: tools.py
